# PasswordSafe

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  KeepassLoader.py  PasswordSafe.doap  README.md  TODO.txt  keepassgtk.in  meson.build  meson_options.txt  meson_post_install.py  passwordsafe.in  pyproject.toml  ruff.toml  secrets.doap  test.kbdx
.githooks/: pre_commit_darkening.py  test_hooks.py
data/: about_dialog.ui  about_dialog.ui.in  attachment_entry_row.ui  attachment_warning_dialog.ui  attribute_entry_row.ui  color_button.ui  color_entry_row.ui  create_database.ui  create_database_headerbar.ui  created_database.ui  custom.css  database.kdbx  database_action_overlay.ui  database_settings_dialog.ui  entries_listbox.ui  entry_page.ui  entry_page_mobile.ui  entry_row.ui  group_page.ui  group_page_mobile.ui  group_row.ui  icon_widget.ui  keepassgtk.css  keepassgtk.gresource.xml  main_window.ui  meson.build  notes_dialog.ui  notification.ui  org.gnome.PasswordSafe.appdata.xml  org.gnome.PasswordSafe.appdata.xml.in  org.gnome.PasswordSafe.appdata.xml.in.in  org.gnome.PasswordSafe.desktop.in  org.gnome.PasswordSafe.desktop.in.in  org.gnome.PasswordSafe.gschema.xml  org.gnome.PasswordSafe.gschema.xml.in  org.gnome.PasswordSafe.metainfo.xml.in.in  org.gnome.PasswordSafe.xml  org.gnome.World.Secrets.desktop.in.in  org.gnome.World.Secrets.gschema.xml.in  org.gnome.World.Secrets.metainfo.xml.in.in  (+27 more)
data/gtk/: add_attribute_dialog.ui  attachment_delete_dialog.ui  attachment_entry_row.ui  attachment_warning_dialog.ui  attribute_entry_row.ui  browsing_panel.ui  color_button.ui  color_entry_row.ui  create_database.ui  create_database_headerbar.ui  credentials_group.ui  database_settings_dialog.ui  edit_element_headerbar.ui  entry_page.ui  entry_page_icon.ui  entry_page_tag.ui  entry_row.ui  error_revealer.ui  expiration_date_row.ui  group_page.ui  group_row.ui  help-overlay.ui  history_row.ui  history_window.ui  locked_headerbar.ui  notes_dialog.ui  password_entry_row.ui  password_generator_popover.ui  preferences_row.ui  properties_dialog.ui  recent_files_headerbar.ui  recent_files_page.ui  references_dialog.ui  save_dialog.ui  search.ui  search_headerbar.ui  selection_mode_headerbar.ui  settings_dialog.ui  shortcuts_dialog.ui  sorting.ui  (+7 more)
data/icons/: meson.build
flatpak/: README.md  maturin.json  org.gnome.PasswordSafe.Devel.json  org.gnome.PasswordSafe.json  org.gnome.World.Secrets.Devel.json  pykeepass-build-sources.json  python3-dbus.json  python3-modules.json  python3-pyhibp.json  python3-pykcs11-sources.json  python3-pykcs11.json  python3-pykeepass.json  python3-pylint.json  python3-pyotp.json  python3-pytest.json  python3-python-yubico.json  python3-setuptools_scm.json  python3-validators.json  python3-wheel.json  python3-zxcvbn-rs-py-sources.json  python3-zxcvbn-rs-py.json  python3-zxcvbn.json  run.terminal.KeepassGtk.json
gsecrets/: application.py  attachment_delete_dialog.py  attachment_warning_dialog.py  attributes_model.py  color_widget.py  config_manager.py  const.py.in  create_database.py  database_manager.py  entry_page.py  entry_row.py  err.py  fingerprint_verifier.py  group_page.py  group_row.py  main.py.in  meson.build  passphrase_generator.py  password_entry_row.py  password_generator.py  password_generator_popover.py  pathbar.py  pathbar_button.py  recent_files_menu.py  recent_files_page.py  recent_manager.py  safe_element.py  save_dialog.py  selection.py  selection_manager.py  settings_dialog.py  single_selection.py  sorting.py  unlock_database.py  unlocked_database.py  unlocked_headerbar.py  utils.py  welcome_page.py
gsecrets/provider/: base_provider.py  file_provider.py  pkcs11_provider.py  providers.py  yubikey_provider.py
gsecrets/widgets/: add_attribute_dialog.py  add_list_box.py  attachment_entry_row.py  attribute_entry_row.py  browsing_panel.py  credentials_group.py  database_settings_dialog.py  edit_element_headerbar.py  entry_page_icon.py  entry_page_tag.py  error_revealer.py  expiration_date_row.py  history_row.py  history_window.py  locked_headerbar.py  mod.py  notes_dialog.py  osd_progress_bar.py  password_level_bar.py  preferences_row.py  progress_icon.py  properties_dialog.py  protected_attribute_entry_row.py  quit_conflict_dialog.py  references_dialog.py  saving_conflict_dialog.py  search.py  search_headerbar.py  selection_mode_headerbar.py  unlock_database_headerbar.py  unlocked_database_page.py  window.py
keepassgtk/: application.py  config_manager.py  container_page.py  create_database.py  created_database.py  database.py  database_creation_gui.py  database_creation_success_gui.py  database_manager.py  database_open_gui.py  entry_row.py  icon.py  (+12 more)
passwordsafe/: application.py  attachment_warning_dialog.py  color_widget.py  config_manager.py  const.py.in  container_page.py  create_database.py  created_database.py  custom_keypress_handler.py  database_manager.py  database_settings_dialog.py  entry_page.py  entry_row.py  error_info_bar.py  group_page.py  group_row.py  history_buffer.py  history_entry_buffer.py  hotp_helper.py  icon.py  keyfile_generator.py  logging_manager.py  main.py.in  main_window.py  meson.build  nitrokey.py  notes_dialog.py  notification.py  oath_xml_builder.py  passphrase_generator.py  password_entry_row.py  password_generator.py  password_generator_popover.py  pathbar.py  pathbar_button.py  properties_dialog.py  python3-pylint.json  quit_dialog.py  recent_files_page.py  references_dialog.py  (+14 more)
passwordsafe/widgets/: attachment_entry_row.py  attribute_entry_row.py  create_database_headerbar.py  database_settings_dialog.py  edit_element_headerbar.py  entry_page_icon.py  error_revealer.py  expiration_date_row.py  mod.py  notes_dialog.py  password_level_bar.py  preferences_row.py  progress_icon.py  properties_dialog.py  recent_files_headerbar.py  references_dialog.py  search.py  search_headerbar.py  selection_mode_headerbar.py  unlock_database_headerbar.py  unlocked_database_page.py  window.py
tests/: meson.build  test_element.py  test_password_generator.py
tests/data/: Test2Groups.kdbx
(+100 files in other folders)
